# christag-agency

./: .gitignore  CLAUDE.md  README.md  agency.service  agency.service.example  app.py  config.yaml  config.yaml.example  package-lock.json  package.json  playwright.config.ts  pyproject.toml  task-6-live-dispatch-desktop.md  task-6-live-dispatch-mobile.md  task-6-live-groups-desktop.md  task-6-live-groups-mobile.md  task-6-live-org-edit-desktop.md  task-6-live-org-edit-mobile.md
.playwright-mcp/: page-2026-07-12T16-14-48-840Z.yml  page-2026-07-12T16-16-04-158Z.yml  page-2026-07-12T16-16-37-079Z.yml  page-2026-07-12T16-17-23-072Z.yml  page-2026-07-12T16-17-51-105Z.yml  page-2026-07-12T16-18-22-403Z.yml  page-2026-07-12T16-19-55-028Z.yml  page-2026-07-12T16-20-22-862Z.yml  page-2026-07-12T16-27-31-696Z.yml  page-2026-07-12T16-28-11-622Z.yml  page-2026-07-12T16-29-04-166Z.yml  page-2026-07-12T16-29-28-998Z.yml
agency/: app.py  cli.py  cli_output.py  clock.py  config.py  instances.py  projector_capabilities.py  proposals.py
docs/: ROADMAP.md
kb/: adding-integrations.md  agent-identity.md  configuration.md  contributing-integrations.md  data-formats.md  deployment.md  design-inspiration.md  directory-structure.md  dispatch.md  getting-started.md  integrations.md  setup-skill.md
reports/: expert-panel-agent-manager-review.md
templates/: admin.html  admin_agent_detail.html  admin_org_edit.html  curiosities.html  decision_detail.html  decisions.html  document_view.html  documents.html  home.html  log_view.html  memory.html  memory_view.html  prompts.html
tests/: _group_helpers.py  _lock_helpers.py  conftest.py  test_admin_agent_create.py  test_admin_dispatch.py  test_admin_dispatch_xss.py  test_admin_org_sandbox.py  test_agency_setup_skill.py  test_agent_detail.py  test_agent_library_routes.py  test_agent_roster.py  test_agent_run.py  test_cli.py  (+63 more)
(+226 files in other folders)
