[project]
name = "christag-agency"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi<0.116",
    "starlette<1.0",
    "uvicorn[standard]",
    "jinja2",
    "markdown",
    "pyyaml",
    "markupsafe",
    "python-multipart",
]

[project.scripts]
christag-agency = "agency.cli:main"

[tool.setuptools.packages.find]
include = ["agency*"]

[tool.setuptools.package-data]
agency = ["templates/*.html", "static/*", "themes/*.yaml"]
