[project]
name = "christag-agency"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "starlette<1.0",
    "portalocker>=3,<4",
    "pydantic>=2.8,<3",
    "uvicorn; sys_platform == 'win32'",
    "uvicorn[standard]; sys_platform != 'win32'",
    "watchfiles>=0.20; sys_platform == 'win32'",
    "jinja2",
    "markdown",
    "pyyaml",
    "markupsafe",
    "python-multipart",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
christag-agency = "agency.cli:main"

[tool.setuptools.packages.find]
include = ["agency*"]

[tool.setuptools.package-data]
agency = ["templates/*.html", "static/*", "themes/*.yaml"]

[tool.pytest.ini_options]
markers = [
    "real_runtime: opt-in probes against installed external AI runtimes",
]
